[tool.poetry]
name = "sfmanager"
version = "0.1.0"
description = ""
authors = ["sylvain kadjo <sylvainka12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"


[tool.poetry.group.check.dependencies]


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.5.0"


[tool.poetry.group.format.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre-commit-intall = "pre-commit install"
